delete empty class

--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@ input, textarea {
   -moz-transition: all 0.30s ease-in-out;
   -ms-transition: all 0.30s ease-in-out;
   -o-transition: all 0.30s ease-in-out;
+  transition: all 0.30s ease-in-out;
   outline: none;
    padding: 3px 0px 3px 3px; 
   /* margin: 5px 1px 3px 0px; */
@@ -114,6 +115,8 @@ input:focus, textarea:focus {
 .btn__submit--error{
   border: 2px solid red;
 }
+
+/* 
 .btn__submit--progress{
 	
-}
+} */
